      
    - ...the only known (and really, really rare) use case where a 
      different foreign_keys setting was used on the forwards/backwards 
      side, a composite foreign key that partially points to its own 
      columns, has been enhanced such that the fk->itself aspect of the 
      relation won't be used to determine relation direction.
     
    - Trimmed the pickle format for InstanceState which should further
      reduce the memory footprint of pickled instances.  The format
      should be backwards compatible with that of 0.5.4 and previous.
      
- sql
    - Removed an obscure feature of execute() (including connection,
      engine, Session) whereby a bindparam() construct can be sent as 
      a key to the params dictionary.  This usage is undocumented
      and is at the core of an issue whereby the bindparam() object
      created implicitly by a text() construct may have the same 
      hash value as a string placed in the params dictionary and
      may result in an inappropriate match when computing the final
      bind parameters.   Internal checks for this condition would
      add significant latency to the critical task of parameter 
      rendering, so the behavior is removed.  This is a backwards
      incompatible change for any application that may have been
      using this feature, however the feature has never been
      documented.
    
0.5.4p2
=======

- sql
    - Repaired the printing of SQL exceptions which are not 
      based on parameters or are not executemany() style.
      
- postgres
    - Deprecated the hardcoded TIMESTAMP function, which when
      used as func.TIMESTAMP(value) would render "TIMESTAMP value".
      This breaks on some platforms as Postgres doesn't allow
      bind parameters to be used in this context.  The hard-coded
      uppercase is also inappropriate and there's lots of other
      PG casts that we'd need to support.  So instead, use